# slackify-markdown-python

./: .pre-commit-config.yaml  LICENSE  Pipfile  ast.json  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  test_mrkdwn.py  text.md
.github/workflows/: pre-release.yml  release.yml  tests.xml  tests.yml
docs/: architecture.md
src/: ast_imp.py
src/slackify_markdown/: __init__.py  service.py  slackify.py  utils.py
tests/: test_convert.py
