[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slackify_markdown"
version = "0.2.0"
description = "Convert markdown to Slack-compatible formatting"
readme = "readme.md"
authors = [
  { name="Manthan Surkar", email="manthan1674@gmail.com" }
]

license = { file="LICENSE" }
requires-python = ">=3.8"
keywords = ["slack", "markdown", "mrkdwn", "converter", "formatting", "text"]

classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Communications :: Chat",
]

dependencies = [
    "markdown-it-py>=3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/thesmallstar/slackify-markdown-python"
"Bug Tracker" = "https://github.com/thesmallstar/slackify-markdown-python/issues"
"Documentation" = "https://github.com/thesmallstar/slackify-markdown-python#readme"


[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
